k8s/fcf/bases/resources/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      component: backend
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        component: backend
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config

      containers:
        - name: nginx
          image: nginx:1.16-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              memory: "256Mi"
              cpu: "400m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 15

        - name: nuxt
          image: eu.gcr.io/yosoku-games/fantasy-cycling-frontend
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
