k8s/fcf/bases/resources/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    component: backend
  type: NodePort
