k8s/fcf/bases/resources/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  backend:
    serviceName: backend-service
    servicePort: 80
